# Mesh-Editor

./: .gitignore  CMakeLists.txt  README.md
Resources/Shaders/: circle.frag  color.frag  color.vs  default.vs  flat.frag  flat.vert  font.frag  gouraud.frag  gouraud.vert  light.frag  phong.frag  phong.vert  sprite.frag  sprite.vs
Resources/Shaders/DCEL/: dcelFace.vs
enc_temp_folder/965b4231301c011278d6205eb823ae/: .gitignore
src/: Editor.cpp  Editor.h  main.cpp
src/Core/: CameraController.cpp  CameraController.h
src/Core/Graphics/: RenderUtils.h  Renderer.cpp  Renderer.h
src/Core/Graphics/Shaders/: ShaderData.h  ShaderManager.cpp
src/Core/Input/: InputControl.cpp
src/Core/Loaders/: ObjLoader.h
src/Core/UI/: GUIManager.cpp  GUIManager.h
src/Graphics/: RenderUtils.h  Renderer.cpp  Renderer.h
src/Graphics/Shaders/: ShaderData.cpp  ShaderManager.h
src/HalfEdge/: DCEL.h  Edge.cpp  Edge.h  Face.cpp  Face.h  HalfEdge.cpp  HalfEdge.h  HalfEdgeMesh.cpp  HalfEdgeMesh.h  Vertex.cpp  Vertex.h
src/Input/: InputControl.cpp  InputControl.h
src/Loaders/: ObjLoader.cpp  ObjLoader.h  ObjTriangle.h  TriangleMesh.h
src/Structures/: BoundingBox.cpp  BoundingBox.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  DCEL.cpp  DCEL.h  HalfEdgeMesh.cpp  HalfEdgeMesh.h  Ray.h  VertexData.h
src/Structures/AccelStructure/: AccelStructure.cpp  AccelStructure.h  BVHSAH.cpp  BVHSAH.h
src/Test/: Mesh.h  TestMesh.cpp  TestMesh.h
src/UI/: GUIManager.cpp
